--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
-# Don't track content of these folders
-node_modules/
-.expo/
+node_modules/**/*
+.expo/*
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+
+# macOS
+.DS_Store
